--- a/post.html
+++ b/post.html
@@ -26,7 +26,7 @@
 			    <img id="preview" src="#" alt="Selected photo" style="display:none;"><br>
                 <label for="content">내용:</label><br>
                 <textarea id="content" name="content"></textarea><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="submit-btn">
             </form>
         </div>
     </body>
